[gd_scene load_steps=6 format=3 uid="uid://2a2gcu8y6ijp"]

[ext_resource type="Script" path="res://Scripts/CharacterMenu/characters_menu.gd" id="1_8cjjt"]
[ext_resource type="Script" path="res://Scripts/character_loader.gd" id="2_58b1o"]
[ext_resource type="Script" path="res://Scripts/CharacterMenu/menu_character_list.gd" id="3_vympj"]
[ext_resource type="Script" path="res://Scripts/CharacterMenu/edit_character_btn.gd" id="4_dsuhr"]
[ext_resource type="Script" path="res://Scripts/CharacterMenu/delete_character_btn.gd" id="5_p8siq"]

[node name="CharactersMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8cjjt")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.239216, 0.239216, 0.239216, 1)

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3

[node name="LblTitle" type="Label" parent="VBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Characters"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.78

[node name="CharacterColumn" type="VBoxContainer" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.14
script = ExtResource("2_58b1o")

[node name="LineEdit" type="LineEdit" parent="VBoxContainer2/HBoxContainer/CharacterColumn"]
visible = false
layout_mode = 2
placeholder_text = "Name..."

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer2/HBoxContainer/CharacterColumn"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxCharList" type="VBoxContainer" parent="VBoxContainer2/HBoxContainer/CharacterColumn/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer2/HBoxContainer/CharacterColumn/ScrollContainer/VBoxCharList"]
visible = false
layout_mode = 2
theme_override_font_sizes/normal_font_size = 12
text = "Person A"
fit_content = true

[node name="RichTextLabel2" type="RichTextLabel" parent="VBoxContainer2/HBoxContainer/CharacterColumn/ScrollContainer/VBoxCharList"]
visible = false
layout_mode = 2
theme_override_font_sizes/normal_font_size = 12
text = "Person B"
fit_content = true

[node name="RichTextLabel3" type="RichTextLabel" parent="VBoxContainer2/HBoxContainer/CharacterColumn/ScrollContainer/VBoxCharList"]
visible = false
layout_mode = 2
theme_override_font_sizes/normal_font_size = 12
text = "Person C"
fit_content = true

[node name="RichTextLabel4" type="RichTextLabel" parent="VBoxContainer2/HBoxContainer/CharacterColumn/ScrollContainer/VBoxCharList"]
visible = false
layout_mode = 2
theme_override_font_sizes/normal_font_size = 12
text = "Person D"
fit_content = true

[node name="RichTextLabel5" type="RichTextLabel" parent="VBoxContainer2/HBoxContainer/CharacterColumn/ScrollContainer/VBoxCharList"]
visible = false
layout_mode = 2
theme_override_font_sizes/normal_font_size = 12
text = "Person E"
fit_content = true

[node name="RichTextLabel6" type="RichTextLabel" parent="VBoxContainer2/HBoxContainer/CharacterColumn/ScrollContainer/VBoxCharList"]
visible = false
layout_mode = 2
theme_override_font_sizes/normal_font_size = 12
text = "Person F"
fit_content = true

[node name="ItemList" type="ItemList" parent="VBoxContainer2/HBoxContainer/CharacterColumn"]
layout_mode = 2
size_flags_vertical = 3
item_count = 2
item_0/text = "Test A"
item_1/text = "Person B"
script = ExtResource("3_vympj")

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.67
theme_override_constants/separation = 11

[node name="BtnNew" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "New
"

[node name="BtnEdit" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer3"]
layout_mode = 2
disabled = true
text = "Edit
"
script = ExtResource("4_dsuhr")

[node name="BtnDelete" type="Button" parent="VBoxContainer2/HBoxContainer/VBoxContainer3"]
layout_mode = 2
disabled = true
text = "Delete"
script = ExtResource("5_p8siq")

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer2/MarginContainer"]
layout_mode = 2

[node name="BtnBack" type="Button" parent="VBoxContainer2/MarginContainer/VBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Back
"

[connection signal="characters_loaded" from="VBoxContainer2/HBoxContainer/CharacterColumn" to="VBoxContainer2/HBoxContainer/CharacterColumn/ItemList" method="_on_characters_loaded"]
[connection signal="item_selected" from="VBoxContainer2/HBoxContainer/CharacterColumn/ItemList" to="VBoxContainer2/HBoxContainer/VBoxContainer3/BtnEdit" method="_on_item_list_item_selected"]
[connection signal="item_selected" from="VBoxContainer2/HBoxContainer/CharacterColumn/ItemList" to="VBoxContainer2/HBoxContainer/VBoxContainer3/BtnDelete" method="_on_character_selected"]
[connection signal="items_unselected" from="VBoxContainer2/HBoxContainer/CharacterColumn/ItemList" to="VBoxContainer2/HBoxContainer/VBoxContainer3/BtnEdit" method="_on_item_list_items_unselected"]
[connection signal="items_unselected" from="VBoxContainer2/HBoxContainer/CharacterColumn/ItemList" to="VBoxContainer2/HBoxContainer/VBoxContainer3/BtnDelete" method="_on_item_list_items_unselected"]
[connection signal="pressed" from="VBoxContainer2/HBoxContainer/VBoxContainer3/BtnDelete" to="VBoxContainer2/HBoxContainer/CharacterColumn/ItemList" method="_on_btn_delete_pressed"]
[connection signal="pressed" from="VBoxContainer2/MarginContainer/VBoxContainer2/BtnBack" to="." method="_on_btn_back_pressed"]
